# VideoSwiper

./: .gitignore  DOCUMENTATION.md  README.md  pubspec.yaml
integration_test/: simple_test.dart
lib/: customTypes.dart  main.dart  script.dart  video_collector.dart  video_player.dart  videoplayer.dart
lib/core/: media_controller.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: collage_generation.dart
lib/ui/layouts/: main_layout.dart
lib/ui/screens/: dashboard_screen.dart  swiper_view.dart
lib/ui/theme/: app_colors.dart  view_mode.dart
lib/ui/widgets/: content_area.dart  fullscreen_preview.dart  settings_dialog.dart  sidebar.dart  video_card.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: collage_generation.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_videoswiper.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_videoswiper.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
